使包含“验证码”的图片在前端（登录页面）上显示出来

--- a/statics/chouTi.css
+++ b/statics/chouTi.css
@@ -49,6 +49,12 @@
     background-position: right;
     text-align: center;
 }
+.login_content .validateInput {
+    width: 20%;
+}
+.login_content .showValidate {
+    width: 30%;
+}
 .contentInnerSpace {
     padding: 20px 0;
 }
