将js代码从html中分离出来

--- a/templates/chouTiIndex.html
+++ b/templates/chouTiIndex.html
@@ -97,28 +97,8 @@
             </div>
         </div>
     </div>
-    <script>
-        $(document).ready(function () {
-            $(".tabContentItemPage").width($(".chouTiContent-middlePart").width() -$(".tabContentItem img").width())
-            $(".chouTiContentHead-middlePart li").click(function () {
-                me = $(this)
-                $(".chouTiContent-middlePart .tabContent").each(function (index, currentDom) {
-                    if (!$(currentDom).hasClass("hideTabContent")) {
-                        $(currentDom).addClass("hideTabContent")
-                    }
-                    if ($(currentDom).hasClass(me.attr("id"))) {
-                        $(currentDom).removeClass("hideTabContent")
-                    }
-                })
+    <script type="text/javascript" src="font_statics/jq/chouTiIndex.js">
 
-            })
-            $(".register_title .closeButton").click(function () {
-                $(this).parents(".maskBackground").addClass("css_hide")
-            })
-            $(".identityContainer").click(function () {
-                $(".register_title .closeButton").parents(".maskBackground").removeClass("css_hide")
-            })
-        })
     </script>
 </body>
 </html>
