实现点击切换 验证码

--- a/templates/chouTiIndex.html
+++ b/templates/chouTiIndex.html
@@ -21,7 +21,7 @@
                         <input type="password" placeholder="密码"/>
                         <div>
                             <input class="validateInput" type="text" placeholder="请输入验证码">
-                            <img class="showValidate" src="getValidateCodeImage"/>
+                            <img class="showValidate" src="getValidateCodeImage/"/>
                         </div>
                         <div class="loginRelated">
                             <label><input type="checkbox"/>一个月内自动登录</label><span class="forgetPassword">忘记密码</span>
