--- a/templates/chouTiIndex.html
+++ b/templates/chouTiIndex.html
@@ -16,12 +16,13 @@
             <div class="registerAndLogin_contentContainer">
                 <div class="login_content contentInnerSpace">
                     <div class="login_content_title">邮箱登录 | 用户名登录</div>
-                    <form>
-                        <input type="text" placeholder="邮箱地址"/>
-                        <input type="password" placeholder="密码"/>
+                    <form method="post" action="login.html">
+                        {% csrf_token %}
+                        <input name="username" type="text" placeholder="邮箱地址或用户名"/>
+                        <input name="password" type="password" placeholder="密码"/>
                         <div>
-                            <input class="validateInput" type="text" placeholder="请输入验证码">
-                            <img class="showValidate" src="getValidateCodeImage/"/>
+                            <input name="inputValidateCode" class="validateInput" type="text" placeholder="请输入验证码">
+                            <img class="showValidate" src="getValidateCodeImage"/>
                         </div>
                         <div class="loginRelated">
                             <label><input type="checkbox"/>一个月内自动登录</label><span class="forgetPassword">忘记密码</span>
