--- a/templates/chouTiIndex.html
+++ b/templates/chouTiIndex.html
@@ -16,10 +16,10 @@
             <div class="registerAndLogin_contentContainer">
                 <div class="login_content contentInnerSpace">
                     <div class="login_content_title">邮箱登录 | 用户名登录</div>
-                    <form method="post" action="login.html">
+                    <form id="loginForm" method="post" action="login.html">
                         {% csrf_token %}
-                        <input name="username" type="text" placeholder="邮箱地址或用户名"/>
-                        <input name="password" type="password" placeholder="密码"/>
+                        {{ loginObj.username }}<span>{{ loginObj.errors.username.0 }}</span>
+                        {{ loginObj.password }}
                         <div>
                             <input name="inputValidateCode" class="validateInput" type="text" placeholder="请输入验证码">
                             <img class="showValidate" src="getValidateCodeImage"/>
@@ -27,7 +27,7 @@
                         <div class="loginRelated">
                             <label><input type="checkbox"/>一个月内自动登录</label><span class="forgetPassword">忘记密码</span>
                         </div>
-                        <input type="submit" value="登录"/>
+                        <input id="loginSubmit" type="submit" value="登录"/>
                     </form>
                 </div>
                 <div class="register_content contentInnerSpace">
