--- a/templates/chouTiIndex.html
+++ b/templates/chouTiIndex.html
@@ -32,8 +32,9 @@
                 </div>
                 <div class="register_content contentInnerSpace">
                     <div class="register_content_title">用户注册</div>
-                    <form>
-                        <input type="text" placeholder="请输入邮箱地址"/><button>获取验证码</button>
+                    <form method="post" action="register.html">
+                        {% csrf_token %}
+                        <input type="text" placeholder="请输入邮箱地址"/><span id="getValidateCode">获取验证码</span>
                         <input type="text" placeholder="请输入验证码"/>
                         <input type="password" placeholder="密码"/>
                         <div class="registerNextStep">
