--- a/templates/chouTiIndex.html
+++ b/templates/chouTiIndex.html
@@ -34,7 +34,7 @@
                     <div class="register_content_title">用户注册</div>
                     <form method="post" action="register.html">
                         {% csrf_token %}
-                        <input type="text" placeholder="请输入邮箱地址"/><span id="getValidateCode">获取验证码</span>
+                        <input class="validateEmail" type="text" placeholder="请输入邮箱地址"/><span id="getValidateCode">获取验证码</span>
                         <input type="text" placeholder="请输入验证码"/>
                         <input type="password" placeholder="密码"/>
                         <div class="registerNextStep">
