完成ajax框架搭建

--- a/templates/chouTiIndex.html
+++ b/templates/chouTiIndex.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <link href="/font_statics/chouTi.css" rel="stylesheet"/>
     <script type="text/javascript" src="/font_statics/jq/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="/font_statics/jq/jquery.cookie.js"></script>
 </head>
 <body>
     <div class="maskBackground css_hide">
