--- a/templates/chouTiIndex.html
+++ b/templates/chouTiIndex.html
@@ -35,9 +35,9 @@
                     <div class="register_content_title">用户注册</div>
                     <form method="post" action="register.html">
                         {% csrf_token %}
-                        <input class="validateEmail" name="validateEmail" type="text" placeholder="请输入邮箱地址"/><span id="getValidateCode">获取验证码</span>
+                        {{ registerObj.validateEmail }}<span id="getValidateCode">获取验证码</span>
                         <div class="validateEmailError"></div>
-                        <input name="username" placeholder="用户名">
+                        {{ registerObj.username }}
                         <input type="text" name="validationCode" placeholder="请输入验证码"/>
                         <input type="password" name="password" placeholder="密码"/>
                         <div class="registerNextStep">
