--- a/templates/chouTiIndex.html
+++ b/templates/chouTiIndex.html
@@ -91,7 +91,7 @@
                                     <p><span>【{{ new.title }}】</span><span>{{ new.summary }}</span></p>
                                     <div>
                                         <a><span class="operateImageCommon liked"></span><span class="operateTxtCommon likedTxt"></span></a>
-                                        <a class="spaceBetween"><span class="operateImageCommon comments"></span><span class="operateTxtCommon commentsTxt">2</span></a>
+                                        <a class="spaceBetween"><span class="operateImageCommon comments"></span><span class="operateTxtCommon commentsTxt"></span></a>
                                         <a class="spaceBetween"><span class="operateImageCommon saved"></span><span class="operateTxtCommon savedTxt"></span></a>
                                     </div>
                                 </div>
