--- a/statics/chouTi.css
+++ b/statics/chouTi.css
@@ -183,7 +183,7 @@
     width: 18px;
     height: 18px;
 }
-.saved {
+.collected {
     background: url("images/save-56845dd49a.png") no-repeat -10px -12px;
     background-size: 44px auto;
     width: 20px;
