初步实现"评论“的树状数据传到前端

--- a/templates/chouTiIndex.html
+++ b/templates/chouTiIndex.html
@@ -90,7 +90,7 @@
                             <div new_id="{{ new.id }}" class="newItem">
                                 <div class="tabContentItemPage floatLeft">
                                     <p><span>【{{ new.title }}】</span><span>{{ new.summary }}</span></p>
-                                    <div>
+                                    <div class="operateBox">
                                         <a><span class="operateImageCommon liked"></span><span class="operateTxtCommon likedTxt">{% filter0Count new.likedCount %}</span></a>
                                         <a class="spaceBetween"><span class="operateImageCommon comments"></span><span class="operateTxtCommon commentsTxt">{% filter0Count  new.commentedCount %}</span></a>
                                         <a class="spaceBetween"><span class="operateImageCommon collected"></span><span class="operateTxtCommon collectedTxt"></span></a>
