完成“分页”功能

--- a/templates/chouTiIndex.html
+++ b/templates/chouTiIndex.html
@@ -108,6 +108,9 @@
             </div>
         </div>
     </div>
+    <div class="pagination">
+        {{ str_pagers }}
+    </div>
     <script type="text/javascript" src="font_statics/jq/chouTiIndex.js">
 
     </script>
