完成“发布”将数据提交到数据库（其中图片放硬盘，路径放数据库），通过刷新页面可现实新的数据

--- a/templates/chouTiIndex.html
+++ b/templates/chouTiIndex.html
@@ -87,12 +87,13 @@
                         <iframe name="forUploadImage" src="" ></iframe>
                         <input type="file" name="imageInput" id="imageInput" />
                     </form>
-                    <form action="/upload_aNew.html" method="post">
+                    <form id="upload_aNewToDataBase" action="/upload_aNew.html" method="post">
                         {% csrf_token %}
                         {{ publishWindowObj.title }}
                         {{ publishWindowObj.summary }}
-                        {{ publishWindowObj.kindName }}
                         {{ publishWindowObj.url }}
+                        {{ publishWindowObj.kindName }}
+                        {{ publishWindowObj.portraitPath }}
                         <input type="submit" />
                     </form>
                 </div>
